feat: `getCarListWithLongestDistance` 메서드 구현
`getLongestDistanceFromCarList` 메서드로 최대 길이를 가져옵니다.
`filterCarListWithLongestDistance` 메서드로 최디 길이의 Car 목록만을 필터링합니다.
이후 `getCarListWithLongestDistance` 메서드에서 불변 리스트로 반환합니다.